If we require the calling thread to lock the observation point list, then the list can be shared between threads. The simplest way to do this is to make the accessor function name clear that this is required, hence getObservationPoints_callerMustLock()